--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "^5.0.0-alpha.102",
     "@mui/material": "^5.10.6",
+    "@mui/x-date-pickers": "^5.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,12 +16,17 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-date-picker": "^9.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "reactjs-percentage-circle": "^1.0.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -46,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.0.0",
+    "@types/lodash": "^4.14.186",
+    "@types/numeral": "^2.0.2"
   }
 }
