--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.102",
     "@mui/material": "^5.10.6",
-    "@mui/x-date-pickers": "^5.0.4",
     "@mui/styles": "^5.10.8",
+    "@mui/x-date-pickers": "^5.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,14 +17,21 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.2",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
+    "js-file-download": "^0.4.12",
     "numeral": "^2.0.6",
-    "react": "^18.2.0",
+    "pdf-viewer-reactjs": "^2.2.3",
+    "react": "^18.0.0",
     "react-cookie": "^4.1.1",
     "react-date-picker": "^9.0.0",
     "react-datepicker": "^4.8.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.0.0",
+    "react-dropzone": "^14.2.2",
+    "react-google-drive-picker": "^1.2.0",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "reactjs-percentage-circle": "^1.0.0",
